apps/buggyracer/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buggyracer
spec:
  selector:
    app: buggyracer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8787
