apps/buggyracer/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buggyracer
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking
  hostnames:
    - "buggyracer.thdxg.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: buggyracer
          port: 80
